# glSoftPipe

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cscope.in.out  cscope.out  cscope.po.out
CMake/: FindXCB.cmake
assets/Aircraft_MIG29A/: MIG29A_L.3DS
examples/: CMakeLists.txt  mesh.h  test_vertex_shader.cpp
examples/AlphaBlend/: AlphaBlend.cpp  CMakeLists.txt
examples/CrytekSponza/: CMakeLists.txt  CrytekSponza.cpp
examples/LoadModel/: CMakeLists.txt  LoadModel.cpp  main.cpp
examples/LoadModel/materials/: test0.tga
examples/LocalModel/: main.cpp  mesh.cpp
examples/ShadowMap/: CMakeLists.txt  ShadowMap.cpp
examples/materials/: test1.tga  test2.tga  test3.tga  test4.tga  test5.tga
src/: CMakeLists.txt
src/Common/: CMakeLists.txt  MemoryPool.cpp  MemoryPool.h  ThreadPool.cpp  ThreadPool.h
src/Common/include/: IEGLBridge.h  MemoryPool.h  ThreadPool.h  arch.h  compiler.h  glsp_debug.h  glsp_defs.h  glsp_spinlock.h  os.h
src/Common/include/khronos/GL/: glspcorearb.h
src/Common/src/: MemoryPool.cpp  ThreadPool.cpp
src/OpenGL/: CMakeLists.txt
src/OpenGL/core/: Binning.cpp  Binning.h  BufferObject.cpp  BufferObject.h  CMakeLists.txt  Clipper.cpp  Clipper.h  DataFlow.cpp  DataFlow.h  DrawEngine.cpp  DrawEngine.h  DrawEngineExport.h  FaceCuller.cpp  FaceCuller.h  FrameBufferObject.cpp  FrameBufferObject.h  GLContext.cpp  GLContext.h  NameSpace.cpp  NameSpace.h  PerspectiveDivider.cpp  PerspectiveDivider.h  PipeStage.cpp  PipeStage.h  PixelBackend.cpp  PixelBackend.h  PrimitiveAssembler.cpp  PrimitiveAssembler.h  Rasterizer.cpp  Rasterizer.h  SamplerObject.h  ScreenMapper.cpp  ScreenMapper.h  Shader.cpp  Shader.h  TBDR.cpp  TBDR.h  Texture.cpp  Texture.h  VertexArrayObject.cpp  (+4 more)
src/RenderUtility/: CMakeLists.txt  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  RenderUtility.cpp  RenderUtility.h
src/app_framework/: CMakeLists.txt  IAppFramework.cpp  IAppFramework.h  INativeWindowManager.cpp  INativeWindowManager.h
src/app_framework/Linux/: GLFWAppFramework.cpp  GLFWAppFramework.h  GLFWNativeWindowManager.cpp
src/app_framework/Windows/: D3DNativeWindowManager.cpp  WinAppFramework.cpp  WinAppFramework.h
src/core/: BufferObject.cpp  BufferObject.h  CMakeLists.txt  Clipper.cpp  Clipper.h  DataFlow.h  DrawEngine.cpp  DrawEngine.h  FaceCuller.cpp  FaceCuller.h  FixedFunction.cpp  FixedFunction.h  GLContext.cpp  GLContext.h  NameSpace.cpp  NameSpace.h  PerspectiveDivider.cpp  PerspectiveDivider.h  PipeStage.cpp  PipeStage.h  PrimitiveAssembler.cpp  PrimitiveAssembler.h  PrimitiveProcessor.cpp  PrimitiveProcessor.h  Rasterizer.cpp  Rasterizer.h  ScreenMapper.cpp  ScreenMapper.h  Shader.cpp  Shader.h  VertexArrayObject.cpp  VertexArrayObject.h  VertexCache.cpp  VertexCache.h  bufobj.h  glsp_defs.h  vs_example.cpp  vs_example.h
src/egl/: CMakeLists.txt
src/egl/main/: CMakeLists.txt  EGLConfigBase.h  EGLContextBase.cpp  EGLContextBase.h  EGLDisplayBase.cpp  EGLDisplayBase.h  EGLGlobal.cpp  EGLGlobal.h  EGLSurfaceBase.cpp  EGLSurfaceBase.h  eglApi.cpp
src/egl/ws/x11/: EGLContextX11.cpp  EGLContextX11.h  EGLDisplayX11.cpp  EGLDisplayX11.h  EGLSurfaceX11.cpp  EGLSurfaceX11.h
src/egl_deprecated/: CMakeLists.txt
src/egl_deprecated/main/: EGLConfigBase.cpp  EGLConfigBase.h  EGLContextBase.cpp  EGLContextBase.h  EGLDisplayBase.h  EGLGlobal.h
src/egl_deprecated/ws/x11/: EGLContextX11.cpp  EGLDisplayX11.h  EGLSurfaceX11.cpp
src/include/common/: IEGLBridge.h  glsp_debug.h  glsp_defs.h  glsp_spinlock.h
src/include/export/: shader_export.h
src/platform/: CMakeLists.txt
src/platform/offscreen/: CMakeLists.txt  os_output.cpp
unittests/: CMakeLists.txt  test_name_space.cpp  test_vertex_shader.cpp  test_vs_example.cpp
