CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(GLSOFTPIPE)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/CMake/")
SET(CMAKE_BUILD_TYPE release)

IF(UNIX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11 -DGL_GLEXT_PROTOTYPES")
ENDIF(UNIX)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(examples)
