CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(GLSOFTPIPE)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/CMake/")
SET(CMAKE_BUILD_TYPE Release)
#SET(CMAKE_BUILD_TYPE Debug)
#SET(CMAKE_BUILD_TYPE RelWithDebInfo)

IF(UNIX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11 -DGL_GLEXT_PROTOTYPES -DMAGICKCORE_HDRI_ENABLE=0 -DMAGICKCORE_QUANTUM_DEPTH=16")
ENDIF(UNIX)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(examples)
