CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

AUX_SOURCE_DIRECTORY(./ ALPHABLEND_SRC)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

ADD_EXECUTABLE(alpha_blend ${ALPHABLEND_SRC})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/OpenGL/core)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/app_framework)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/RenderUtility)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/Common/include)
INCLUDE_DIRECTORIES(${ImageMagick_INCLUDE_DIRS}
					${ASSIMP_INCLUDE_DIRS}
					${GLM_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES(alpha_blend
					  glsp_ogl
					  app_framework
					  render_utility)
