CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(EGLMAIN_SRC
	main/eglApi.cpp
	main/EGLGlobal.cpp
)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

ADD_LIBRARY(glsp SHARED ${PIPELINE_SRC})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/include)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DPRIMITIVE_OWNS_VERTICES")
