CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

AUX_SOURCE_DIRECTORY(. PIPELINE_SRC)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/include
					${PROJECT_SOURCE_DIR}/src/Common)

ADD_LIBRARY(glsp_ogl SHARED ${PIPELINE_SRC})

FIND_PACKAGE(Threads)
TARGET_LINK_LIBRARIES(glsp_ogl
					  glsp_common
					  ${CMAKE_THREAD_LIBS_INIT})

ADD_DEPENDENCIES(glsp_ogl glsp_common)
